fixed alignment for better view

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
-    width: 80vw;
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items:stretch;
     justify-content: space-evenly;
 }
